[gd_scene load_steps=16 format=3 uid="uid://ckwi7v2biixkx"]

[ext_resource type="Script" path="res://Main.gd" id="1_0ca0f"]
[ext_resource type="Script" path="res://Version Number.gd" id="1_vivbn"]
[ext_resource type="Texture2D" uid="uid://soxtfmooqv0" path="res://background.png" id="2_3iw88"]
[ext_resource type="FontFile" uid="uid://cgr2nc1yl1u42" path="res://SILKSCREEN.TTF" id="2_7hj4y"]
[ext_resource type="FontFile" uid="uid://7uogqcgcap07" path="res://HACKED.TTF" id="2_m5kpi"]
[ext_resource type="Script" path="res://FileSearch.gd" id="2_tmmu4"]
[ext_resource type="Texture2D" uid="uid://cb33rw0gtirws" path="res://Button.png" id="6_6p813"]
[ext_resource type="Texture2D" uid="uid://bgwa5c7rhctwq" path="res://Button Focused.png" id="7_c4cc4"]
[ext_resource type="Texture2D" uid="uid://ig0bqnksjmbo" path="res://Button Pressed.png" id="7_qofl3"]
[ext_resource type="BitMap" uid="uid://mptcpe4p3jep" path="res://Button mask.bmp" id="8_ftfu3"]
[ext_resource type="Texture2D" uid="uid://enh5ctlpglmt" path="res://Button Disabled.png" id="9_8gaer"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vaakp"]
texture = ExtResource("2_3iw88")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uxag4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1kcg7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yvg46"]
bg_color = Color(0.105882, 0.792157, 1, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ca0f")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vaakp")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Panel2" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Panel2/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Panel2/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("2_m5kpi")
theme_override_font_sizes/font_size = 25
text = "Luna Bolds Semi Automatic Digimon Story Cyber Sleuth Mod Compatible Encounter Randomizer"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Version" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Panel2/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("2_m5kpi")
theme_override_font_sizes/font_size = 27
text = "Ver.1.1"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3
script = ExtResource("1_vivbn")
_versionNumber = "Ver.1.1"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/separation = 40
theme_override_styles/separator = SubResource("StyleBoxEmpty_uxag4")

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Readme" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Panel"]
texture_filter = 1
layout_mode = 2
offset_top = 4.0
offset_right = 984.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("2_7hj4y")
theme_override_font_sizes/font_size = 21
text = "Make sure you have read the included text file before patching!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/separation = 40
theme_override_styles/separator = SubResource("StyleBoxEmpty_uxag4")

[node name="Button" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_6p813")
texture_pressed = ExtResource("7_qofl3")
texture_hover = ExtResource("7_c4cc4")
texture_disabled = ExtResource("9_8gaer")
texture_focused = ExtResource("7_c4cc4")
texture_click_mask = ExtResource("8_ftfu3")
stretch_mode = 5
script = ExtResource("2_tmmu4")

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/separation = 80
theme_override_styles/separator = SubResource("StyleBoxEmpty_uxag4")

[node name="Panel3" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/Panel3/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_7hj4y")
theme_override_font_sizes/font_size = 31
theme_override_styles/background = SubResource("StyleBoxEmpty_1kcg7")
theme_override_styles/fill = SubResource("StyleBoxFlat_yvg46")

[node name="DoneText" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/Panel3/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_7hj4y")
theme_override_font_sizes/normal_font_size = 56
bbcode_enabled = true
text = "[center][rainbow freq=.2sat=1. val=1.]Done!"
fit_content = true

[node name="AcceptDialog" type="AcceptDialog" parent="."]

[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="start_patching"]
